用户评论内容的审核机制完善
使用了微信自带的内容审核机制，对用户的评论进行实时的审核与反馈！

--- a/miniprogram/pages/postdetail/postdetail.wxml
+++ b/miniprogram/pages/postdetail/postdetail.wxml
@@ -1,3 +1,4 @@
+<van-dialog id="van-dialog" />
 <view class="head"> 
   <view class="user">
     <image class="usericon" src="{{postInfo.avatarUrl}}" mode="aspectFill"></image>
